# file_library

./: .gitignore  CMakeLists.txt  README.md  file_library.sln  file_library.vcxproj  file_library.vcxproj.filters  main.cpp
examples/: example_read.txt
lib/: exceptions.cpp  filelib.cpp  filelib.h
